--- a/domonique.html
+++ b/domonique.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<!-- All HTML documents begin and end with an "html" tag -->
+<html lang="en">
 
+  <!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used -->
+	<head>
+		<title>Typography and Color Options</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Droid+Serif|Roboto" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/colors.css">
+
+	</head>
+
+	
+  <!-- The "body" is the part of your document where you include all content you want to show up in the browser -->
+	<body>
+		
+		
+		<div class=" box"orange"></div>
+		<div class="box green"></div>
+		<div class="box red"></div>
+		<div class="box light_green"></div>
+		<div class="box blue"></div>
+		
+
+	</body>
+   
+</html>
