--- a/domonique.html
+++ b/domonique.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <!-- All HTML documents begin and end with an "html" tag -->
-<html lang="en">
+<html lang="en" class="gr_domoniques_github_io">
 
   <!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used -->
 	<head>
-		<title>Typography and Color Options</title>
+		<title>Domonique</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Droid+Serif|Roboto" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/colors.css">
+		<link rel="stylesheet" href="domonique.css">
 
 	</head>
 
