--- a/domonique.html
+++ b/domonique.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <!-- All HTML documents begin and end with an "html" tag -->
-<html lang="en" class="gr_domoniques_github_io">
+<html lang="en">
 
   <!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used -->
 	<head>
-		<title>Domonique</title>
+		<title>Typography and Color Options</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Droid+Serif|Roboto" rel="stylesheet">
-		<link rel="stylesheet" href="domonique.css">
-
+		<link rel="stylesheet" type="text/css" href="fonts.css">
+		<link rel="stylesheet" type="text/css" href="css/colors.css">
 	</head>
+	
 
 	
   <!-- The "body" is the part of your document where you include all content you want to show up in the browser -->
 	<body>
+	
+		<h1>Baloo Bhaijaan</h1>
+		<h2>Roboto</h2>
+		<h3>Droid Serif</h3>
 		
-		
-		<div class=" box"orange"></div>
+		<div class="box dark_blue"></div>
+		<div class="white"></div>
+		<div class="box light_blue"></div>
+		<div class="white"></div>
 		<div class="box green"></div>
-		<div class="box red"></div>
-		<div class="box light_green"></div>
-		<div class="box blue"></div>
-		
 
 	</body>
    
