--- a/domonique.html
+++ b/domonique.html
@@ -6,9 +6,9 @@
 	<head>
 		<title>Typography and Color Options</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Droid+Serif|Roboto" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="fonts.css">
-		<link rel="stylesheet" type="text/css" href="css/colors.css">
+		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
+	
+		<link rel="stylesheet" type="text/css" href="domonique.css">
 	</head>
 	
 
