--- a/domonique.html
+++ b/domonique.html
@@ -20,9 +20,9 @@
 		
 		
 		<div class="box dark_blue"></div>
-		<div class="white"></div>
+		<div class="box white"></div>
 		<div class="box light_blue"></div>
-		<div class="white"></div>
+		<div class="box white"></div>
 		<div class="box green"></div>
 
 	</body>
