--- a/domonique.html
+++ b/domonique.html
@@ -19,11 +19,11 @@
 		<h1>Domonique Stewart</h1>
 		
 		
-		<div class="box dark_green"></div>
+		<div class="box dark_purple"></div>
 		<div class="box white"></div>
-		<div class="box light_green"></div>
+		<div class="box light_pink"></div>
 		<div class="box white"></div>
-		<div class="box light_blue"></div>
+		<div class="box blue"></div>
 
 	</body>
    
