--- a/domonique.html
+++ b/domonique.html
@@ -7,8 +7,7 @@
 		<title>Typography and Color Options</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
-	
-		<link rel="stylesheet" type="text/css" href="domonique.css">
+		<link rel="stylesheet" href="domonique.css">
 	</head>
 	
 
