--- a/domonique.html
+++ b/domonique.html
@@ -18,11 +18,11 @@
 		<h1>Domonique Stewart</h1>
 		
 		
-		<div class="box dark_purple"></div>
+		<div class="1box dark_purple"></div>
 	
-		<div class="box light_pink"></div>
+		<div class="2box light_pink"></div>
 	
-		<div class="box blue"></div>
+		<div class="3box blue"></div>
 
 	</body>
    
