--- a/domonique.html
+++ b/domonique.html
@@ -19,11 +19,11 @@
 		<h1>Domonique Stewart</h1>
 		
 		
-		<div class="box1 dark_purple"></div>
+		<div class="box1 dark_green"></div>
 	
 		<div class="box2 light_pink"></div>
 	
-		<div class="box3 blue"></div>
+		<div class="box3 light_green"></div>
 
 	</body>
    
