--- a/domonique.html
+++ b/domonique.html
@@ -21,7 +21,7 @@
 		
 		<div class="box1 dark_green"></div>
 	
-		<div class="box2 light_pink"></div>
+		<div class="box2 light_blue"></div>
 	
 		<div class="box3 light_green"></div>
 
