--- a/domonique.html
+++ b/domonique.html
@@ -20,8 +20,8 @@
 		
 		
 		<div class="box1 dark_green"></div>
-	
-		<div class="box3 light_green"></div>
+		<div class="box2 light_green"></div>
+		<div class="box3 dark_blue"></div>
 
 	</body>
    
