--- a/domonique.html
+++ b/domonique.html
@@ -22,7 +22,7 @@
 		<div class="box1 dark_green"></div>
 		<div class="box2 light_green"></div>
 		<div class="box3 dark_blue"></div>
-		<div class="box4 light_blue"></div>
+		<div class="box4 blue"></div>
 
 	</body>
    
