--- a/domonique.html
+++ b/domonique.html
@@ -23,7 +23,8 @@
 		<div class="box2 light_green"></div>
 		<div class="box3 dark_blue"></div>
 		<div class="box4 blue"></div>
-		<div class="center hotizantal center vertical"<"box5 brown"></div>
+		<div "center hotizantal center vertical"</div>
+		<div class="box5 brown"></div>
 
 	</body>
    
