--- a/domonique.html
+++ b/domonique.html
@@ -16,7 +16,7 @@
   <!-- The "body" is the part of your document where you include all content you want to show up in the browser -->
 	<body>
 	
-		<h1>Domonique Stewart</h1>
+		<h1><center>Domonique Stewart</center></h1>
 		
 		
 		<div class="box1 dark_green"></div>
