--- a/domonique.html
+++ b/domonique.html
@@ -16,6 +16,9 @@
   <!-- The "body" is the part of your document where you include all content you want to show up in the browser -->
 	<body>
 	
+	body {
+    background-color: black;
+}
 		<h1><center>Domonique Stewart</center></h1>
 		
 		
@@ -23,7 +26,6 @@
 		<div class="box2 light_green"></div>
 		<div class="box3 dark_blue"></div>
 		<div class="box4 blue"></div>
-		<div "center hotizantal center vertical"</div>
 		<div class="box5 brown"></div>
 
 	</body>
