--- a/domonique.html
+++ b/domonique.html
@@ -19,7 +19,7 @@
 	
 		
 		<h1><center>Domonique Stewart</center></h1>		
-		<p>Domo<div class="box1 dark_green"></div></p>
+		<div class="box1 dark_green"></div>
 		<div class="box2 light_green"></div>
 		<div class="box3 dark_blue"></div>
 		<div class="box4 blue"></div>
