--- a/domonique.html
+++ b/domonique.html
@@ -18,8 +18,8 @@
 	
 	
 		
-		<h1><center>Domonique Stewart</center></h1>		
-		<div class="box1 dark_green"></div>
+		<h1><center>Domonique Stewart</center></h1>
+		<div class="box1 dark_green" onclick="makeOpaque(this)"></div>
 		<div class="box2 light_green"></div>
 		<div class="box3 dark_blue"></div>
 		<div class="box4 blue"></div>
