--- a/domonique.html
+++ b/domonique.html
@@ -5,6 +5,7 @@
   <!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used -->
 	<head>
 		<link rel="stylesheet" href="domonique.css">
+		<link rel="stylesheet" href="domonique.javascript">
 		<title>Typography and Color Options</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
