--- a/domonique.html
+++ b/domonique.html
@@ -5,7 +5,6 @@
   <!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used -->
 	<head>
 		<link rel="stylesheet" href="domonique.css">
-		<link rel="stylesheet" href="domonique.javascript">
 		<title>Typography and Color Options</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
@@ -20,7 +19,7 @@
 	
 		
 		<h1><center>Domonique Stewart</center></h1>
-		<div class="box1 dark_green" onclick="makeOpaque(this)"></div>
+		<div class="box1 dark_green"></div>
 		<div class="box2 light_green"></div>
 		<div class="box3 dark_blue"></div>
 		<div class="box4 blue"></div>
